fix the pipeline